package ar.edu.cuvl.utn.progra3.Ejercicio_ciclos_cpu.Clases.Excepciones;

public class invalid_user_priority_exception extends Exception{

}
